<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/black">

    <Button
        android:id="@+id/Navigation_Main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/bebas_neue"
        android:text="Main"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search Albums"
        android:textColorHint="#FFFFFF"
        android:inputType="text"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_buttons"
        android:fontFamily="@font/bebas_neue"
        android:text="Search"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/searchResultsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </ScrollView>

</LinearLayout>
